[gd_scene load_steps=11 format=3 uid="uid://bmyc404ipwqqf"]

[ext_resource type="Script" path="res://scripts/tutorial.gd" id="1_1ieuu"]
[ext_resource type="TileSet" uid="uid://dlbjv13cr2qh0" path="res://misc/tutorial_map.tres" id="2_e001g"]
[ext_resource type="PackedScene" uid="uid://csr2d2jr8sm67" path="res://scenes/exit.tscn" id="5_54o1p"]
[ext_resource type="Texture2D" uid="uid://bl8yj5xlmibox" path="res://sprites/bgs/1/cloud_fill.png" id="6_klm07"]
[ext_resource type="PackedScene" uid="uid://dph8pd3qblx44" path="res://scenes/player.tscn" id="8_5qd2w"]
[ext_resource type="Script" path="res://scripts/enemies/bird.gd" id="10_msxe0"]
[ext_resource type="PackedScene" uid="uid://kfhjuvx6ml75" path="res://scenes/help_window.tscn" id="10_t5oa6"]
[ext_resource type="PackedScene" uid="uid://crqtpeg1savcq" path="res://scenes/vending_machine.tscn" id="11_5jtk0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ecxo"]
size = Vector2(68, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qs66c"]
size = Vector2(22, 76)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_1ieuu")

[node name="TileMap" type="TileMap" parent="."]
clip_children = 2
visibility_layer = 4
z_index = -1
y_sort_enabled = true
tile_set = ExtResource("2_e001g")
cell_quadrant_size = 24
format = 2
layer_0/name = "Ground"
layer_0/z_index = -3
layer_0/tile_data = PackedInt32Array(-65539, 393220, 1, -65538, 65540, 1, -65537, 65540, 1, -131072, 65540, 1, -131071, 65540, 1, -131070, 65540, 1, -131069, 327684, 2, -65530, 65540, 2, 5, 131076, 1, 4, 65540, 1, 3, 65540, 1, 2, 65540, 1, 1, 65540, 1, 0, 65540, 1, 65535, 65540, 1, 65534, 65540, 1, 65533, 4, 1, -3, 4, 1, -2, 65540, 1, -1, 65540, 1, -65536, 65540, 1, -65535, 65540, 1, -65533, 65540, 1, -196605, 131076, 1, -196606, 65540, 1, -65534, 65540, 1, -196607, 393220, 2, -196608, 65540, 0, -131073, 65540, 0, -131074, 65540, 0, -262143, 4, 1, -262142, 65540, 1, -327678, 65540, 1, -327679, 4, 1, -262141, 131076, 1, -327677, 327684, 1, 131069, 4, 2, 131070, 65540, 2, 131071, 393220, 1, 65536, 65540, 1, 65537, 65540, 1, 65538, 65540, 1, 65539, 65540, 1, 65540, 65540, 1, 65543, 393220, 4, 7, 393220, 4, -65529, 589828, 0, -131066, 393220, 2, -327676, 65540, 2, -196602, 393220, 4, -131075, 65540, 0, 196607, 4, 1, 131072, 65540, 1, 131073, 65540, 1, 131074, 65540, 1, 131075, 65540, 1, 131076, 327684, 1, 131079, 393220, 3, 196611, 65540, 2, 196610, 524292, 1, 196609, 65540, 2, 196608, 65540, 2, 262143, 4, 2, -327674, 589828, 0, -262138, 4, 1, -327675, 65540, 2, -65531, 327684, 1, -65532, 65540, 1, -131068, 65540, 0, -131067, 65540, 0, 131078, 65540, 3, 131077, 327684, 3, 65541, 131076, 1, -327673, 131076, 0, -262137, 131076, 1, -196601, 131076, 1, -131065, 131076, 1, -720896, 65540, 2, -655361, 65540, 2, -655362, 4, 2, -720898, 393220, 1, -720897, 65540, 1, -786433, 65540, 1, -786432, 65540, 1, -720895, 131076, 2, -786431, 327684, 1, -851968, 65540, 1, -786434, 65540, 1, -786435, 65540, 1, -851967, 65540, 1, -851966, 65540, 1, -786436, 4, 1, -720899, 65540, 2, -786430, 65540, 2, -720900, 4, 2, -851965, 131076, 1, -786429, 131076, 2, -917501, 131076, 1, -917502, 65540, 1, -917503, 65540, 1, -917504, 65540, 1, -851969, 65540, 1, -851970, 65540, 1, -851971, 65540, 1, -851972, 393220, 4, -983037, 131076, 1, -983038, 65540, 1, -983039, 65540, 1, -983040, 65540, 1, -917505, 65540, 1, -917506, 65540, 1, -917507, 65540, 1, -917508, 4, 1, -983044, 4, 1, -983043, 65540, 1, -983042, 65540, 1, -983041, 65540, 1, -1048576, 65540, 1, -1048575, 65540, 1, -1048574, 65540, 1, -1048573, 327684, 1, -1048572, 65540, 2, -1114108, 65540, 1, -1114109, 65540, 1, -1114110, 65540, 1, -1114111, 65540, 1, -1114112, 65540, 1, -1048577, 65540, 1, -1048578, 65540, 1, -1048579, 65540, 1, -1048580, 4, 1, -1048571, 131076, 2, -1114107, 131076, 1, -65528, 131076, 0, 8, 131076, 1, 65544, 131076, 1, -1179643, 131076, 1, -1179644, 65540, 1, -1179645, 65540, 1, -1179646, 65540, 1, -1179647, 65540, 1, -1179648, 65540, 1, -1114113, 65540, 1, -1114114, 65540, 1, -1114115, 65540, 1, -1114116, 4, 1, -1179652, 4, 0, -1179651, 65540, 0, -1179650, 65540, 0, -1179649, 65540, 0, -1245184, 65540, 0, -1245183, 65540, 0, -1245182, 65540, 0, -1245181, 65540, 0, -1245180, 65540, 0, -1245179, 131076, 0, -1376248, 4, 1, -1310712, 4, 1, -1245176, 4, 1, -1245175, 327684, 1, -1245174, 65540, 2, -1245173, 65540, 2, -1310708, 65540, 1, -1376245, 65540, 1, -1376246, 65540, 1, -1376247, 65540, 1, -1310711, 65540, 1, -1310710, 65540, 1, -1310709, 65540, 1, -1376244, 65540, 1, -1245172, 65540, 2, -1441784, 4, 1, -1441783, 65540, 1, -1441782, 65540, 1, -1441781, 65540, 1, -1441780, 65540, 1, -1441779, 65540, 1, -1376243, 327684, 1, -1310707, 131076, 1, -1245171, 131076, 2, -1376242, 65540, 2, -1441778, 65540, 1, -1441777, 131076, 1, -1376241, 131076, 2, -1507313, 131076, 1, -1507314, 65540, 1, -1507315, 65540, 1, -1507316, 65540, 1, -1507317, 65540, 1, -1507318, 65540, 1, -1507319, 65540, 1, -1572855, 393220, 2, -1572856, 4, 0, -1507320, 4, 1, -1572854, 65540, 1, -1572853, 65540, 1, -1572852, 65540, 1, -1572851, 65540, 1, -1572850, 65540, 1, -1572849, 131076, 1, -1638385, 131076, 0, -1638386, 65540, 0, -1638387, 65540, 0, -1638388, 65540, 0, -1638389, 65540, 0, -1638390, 65540, 0, -1638391, 4, 0, -1179640, 4, 2, -1179639, 131076, 2, -262151, 131076, 2, -327687, 131076, 1, -393224, 65540, 1, -458761, 393220, 4, -393227, 131076, 1, -327691, 327684, 2, -262156, 327684, 1, -262152, 327684, 1, -327688, 65540, 1, -262153, 393220, 1, -262154, 65540, 2, -327689, 393220, 2, -393225, 4, 1, -262155, 65540, 2, -196620, 131076, 1, -196621, 65540, 1, -131085, 65540, 2, -131084, 131076, 2, -196622, 65540, 1, -262158, 65540, 1, -327693, 65540, 1, -327692, 65540, 1, -458762, 65540, 3, -393228, 65540, 1, -262157, 65540, 1, -458764, 65540, 0, -458765, 4, 0, -327690, 65540, 0, -393229, 393220, 2, -327694, 65540, 1, -393230, 65540, 0, -458763, 327684, 0, -524295, 131076, 1, -458760, 65540, 1, -393223, 131076, 1, -458759, 131076, 1, -131086, 65540, 2, -524297, 4, 1, -524296, 65540, 1, -393231, 4, 0, -327695, 4, 1, -262159, 4, 1, -196623, 4, 1, -131087, 4, 2, -589832, 524292, 2, -589831, 131076, 0, -196616, 131076, 1, -131080, 131076, 2, -131076, 4, 0, -65540, 4, 2, -393215, 4, 1, -393213, 65540, 0, -393214, 327684, 2, -393212, 65540, 0, -393211, 65540, 0, -393210, 131076, 0, -458751, 4, 0, -196617, 4, 1, -131081, 4, 2, -851973, 65540, 3, -851974, 65540, 3, -851975, 65540, 3, -851976, 262148, 0, -786440, 196612, 2, -720904, 196612, 2, -655368, 196612, 2, -458750, 131076, 0, 196612, 458756, 1, 262148, 458756, 4, 327684, 458756, 3, 327683, 65540, 3, 327682, 262148, 3, 262146, 196612, 2, 131080, 131076, 2, -589833, 4, 0, -2031608, 65540, 2, -2031607, 65540, 2, -2031606, 131076, 2, -2031609, 4, 2, -2097145, 4, 1, -2162681, 4, 1, -2228217, 393220, 4, -2293753, 4, 1, -2359289, 4, 1, -2424825, 4, 0, -2424824, 65540, 0, -2424823, 65540, 0, -2424822, 131076, 0, -2228212, 196612, 3, -2097142, 131076, 1, -2162678, 131076, 1, -2228214, 131076, 1, -2293750, 131076, 1, -2359286, 131076, 1, -2097143, 65540, 1, -2162679, 65540, 1, -2228215, 65540, 1, -2293751, 65540, 1, -2359287, 65540, 1, -2097144, 65540, 1, -2162680, 65540, 1, -2228216, 65540, 1, -2293752, 65540, 1, -2359288, 65540, 1, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196605, 0, 0, 262141, 0, 0, -65541, 0, 0, -131077, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -327680, 0, 0, -393216, 0, 0, -458752, 0, 0, -524287, 0, 0, -524286, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -393209, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -262140, 0, 0, -262139, 0, 0, -196603, 0, 0, -196604, 0, 0, 6, 0, 0, 65542, 0, 0, 262147, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196616, 0, 0, 196615, 0, 0, 196614, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393220, 0, 0, 393219, 0, 0, 393218, 0, 0, 327681, 0, 0, 262145, 0, 0, 262144, 0, 0, 327679, 0, 0, 262142, 0, 0, -196615, 0, 0, -131079, 0, 0, -65544, 0, 0, -65545, 0, 0, -131082, 0, 0, -196618, 0, 0, -196619, 0, 0, -131083, 0, 0, -65548, 0, 0, -65549, 0, 0, -65550, 0, 0, -65551, 0, 0, -131088, 0, 0, -196624, 0, 0, -262160, 0, 0, -327696, 0, 0, -393232, 0, 0, -458767, 0, 0, -458766, 0, 0, -524301, 0, 0, -524300, 0, 0, -524299, 0, 0, -524298, 0, 0, -393226, 0, 0, -589834, 0, 0, -655369, 0, 0, -655367, 0, 0, -589830, 0, 0, -524294, 0, 0, -458758, 0, 0, -393222, 0, 0, -327686, 0, 0, -262150, 0, 0, -720905, 0, 0, -786441, 0, 0, -851977, 0, 0, -917513, 0, 0, -917512, 0, 0, -917511, 0, 0, -917510, 0, 0, -917509, 0, 0, -720903, 0, 0, -786439, 0, 0, -786438, 0, 0, -786437, 0, 0, -720901, 0, 0, -655364, 0, 0, -655363, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -720894, 0, 0, -720893, 0, 0, -786428, 0, 0, -851964, 0, 0, -917500, 0, 0, -983036, 0, 0, -983035, 0, 0, -1048570, 0, 0, -1114106, 0, 0, -1179642, 0, 0, -1245178, 0, 0, -1310715, 0, 0, -1310716, 0, 0, -1310717, 0, 0, -1310718, 0, 0, -1310719, 0, 0, -1310720, 0, 0, -1245185, 0, 0, -1245186, 0, 0, -1245187, 0, 0, -1245188, 0, 0, -1179653, 0, 0, -1114117, 0, 0, -1048581, 0, 0, -983045, 0, 0, -1376249, 0, 0, -1310713, 0, 0, -1245177, 0, 0, -1179641, 0, 0, -1114104, 0, 0, -1114103, 0, 0, -1179638, 0, 0, -1179637, 0, 0, -1179636, 0, 0, -1179635, 0, 0, -1245170, 0, 0, -1310706, 0, 0, -1310705, 0, 0, -1376240, 0, 0, -1441776, 0, 0, -1507312, 0, 0, -1572848, 0, 0, -1638384, 0, 0, -1703921, 0, 0, -1703922, 0, 0, -1703923, 0, 0, -1703925, 0, 0, -1703926, 0, 0, -1703927, 0, 0, -1638392, 0, 0, -1572857, 0, 0, -1507321, 0, 0, -1441785, 0, 0, -2490362, 0, 0, -2424826, 0, 0, -2359290, 0, 0, -2293754, 0, 0, -2228218, 65540, 3, -2162682, 0, 0, -2097146, 0, 0, -2031610, 0, 0, -1966074, 0, 0, -1572860, 131076, 1, -1638396, 131076, 1, -1703932, 131076, 1, -1769468, 131076, 1, -1769469, 65540, 1, -1835005, 65540, 1, -1835006, 65540, 1, -1900542, 65540, 1, -1900543, 65540, 1, -1966079, 393220, 2, -1966080, 65540, 0, -1900545, 65540, 0, -1900546, 65540, 0, -1835010, 65540, 1, -1769474, 65540, 2, -1769475, 327684, 1, -1703939, 131076, 1, -1703940, 4, 1, -1638404, 4, 1, -1572868, 4, 1, -1507332, 4, 2, -1507331, 65540, 2, -1507330, 65540, 2, -1507329, 65540, 2, -1572864, 393220, 1, -1507328, 4, 2, -1507327, 65540, 2, -1507326, 65540, 2, -1572862, 65540, 1, -1572861, 65540, 1, -1507325, 65540, 2, -1507324, 131076, 2, -1638397, 65540, 1, -1835004, 131076, 1, -1900540, 131076, 1, -1966076, 131076, 0, -1966077, 65540, 0, -1966078, 327684, 2, -2031614, 131076, 1, -2031615, 4, 1, -1900547, 65540, 0, -1900548, 4, 0, -1835012, 4, 1, -1769476, 4, 1, -1835011, 65540, 1, -1835009, 65540, 1, -1900544, 65540, 1, -1900541, 65540, 1, -1835007, 65540, 1, -1835008, 393220, 1, -1769473, 65540, 2, -1638403, 131076, 1, -1572866, 65540, 0, -1572867, 327684, 2, -1572865, 65540, 0, -1638400, 393220, 2, -1638399, 65540, 1, -1572863, 65540, 1, -1769472, 4, 1, -1769471, 65540, 1, -1769470, 65540, 1, -1703934, 65540, 1, -1638398, 65540, 1, -1703935, 65540, 1, -1703933, 65540, 1, -1703936, 4, 1, -2097150, 131076, 1, -2097151, 4, 1, -2162687, 4, 1, -2228223, 4, 0, -2228222, 327684, 0, -2162686, 131076, 1, -2228221, 65540, 3, -2228220, 65540, 3, -2228219, 65540, 3, -1703924, 0, 0, -1441788, 0, 0, -1441789, 0, 0, -1441790, 0, 0, -1441791, 0, 0, -1441792, 0, 0, -1441793, 0, 0, -1441794, 0, 0, -1441795, 0, 0, -1441796, 0, 0, -1507333, 0, 0, -1572869, 0, 0, -1638405, 0, 0, -1703941, 0, 0, -1769477, 0, 0, -1835013, 0, 0, -1900549, 0, 0, -1966084, 0, 0, -1966083, 0, 0, -1966082, 0, 0, -1966081, 0, 0, -2031616, 0, 0, -2097152, 0, 0, -2162688, 0, 0, -2228224, 0, 0, -2293760, 0, 0, -2293759, 0, 0, -2293758, 0, 0, -2293757, 0, 0, -2293756, 0, 0, -2293755, 0, 0, -2162683, 0, 0, -2162684, 0, 0, -2162685, 0, 0, -2097149, 0, 0, -2031613, 0, 0, -2031612, 0, 0, -2031611, 0, 0, -1966075, 0, 0, -1900539, 0, 0, -1835003, 0, 0, -1769467, 0, 0, -1703931, 0, 0, -1638395, 0, 0, -1572859, 0, 0, -1507323, 0, 0, -2490361, 0, 0, -2490360, 0, 0, -2490359, 0, 0, -2490358, 0, 0, -2490357, 0, 0, -1966069, 0, 0, -1966070, 0, 0, -1966071, 0, 0, -1966072, 0, 0, -1966073, 0, 0, -2031605, 0, 0, -2097141, 0, 0, -2162677, 0, 0, -2228213, 0, 0, -2293749, 0, 0, -2359285, 0, 0, -2424821, 0, 0, -2293748, 0, 0, -2162676, 0, 0, -2490349, 0, 0, -2424813, 0, 0, -2359277, 0, 0, -2293741, 0, 0, -2228205, 0, 0, -2162669, 0, 0, -2097133, 0, 0, -2031597, 0, 0, -1966061, 0, 0, -2490348, 0, 0, -2424812, 4, 0, -2359276, 4, 1, -2293740, 4, 1, -2228204, 4, 1, -2162668, 4, 1, -2097132, 4, 1, -2031596, 4, 2, -1966060, 0, 0, -2490347, 0, 0, -2424811, 65540, 0, -2359275, 65540, 1, -2293739, 65540, 1, -2228203, 65540, 1, -2162667, 65540, 1, -2097131, 65540, 1, -2031595, 65540, 2, -1966059, 0, 0, -2490346, 0, 0, -2424810, 65540, 0, -2359274, 65540, 1, -2293738, 65540, 1, -2228202, 65540, 1, -2162666, 65540, 1, -2097130, 65540, 1, -2031594, 65540, 2, -1966058, 0, 0, -2490345, 0, 0, -2424809, 131076, 0, -2359273, 131076, 1, -2293737, 131076, 1, -2228201, 131076, 1, -2162665, 131076, 1, -2097129, 131076, 1, -2031593, 131076, 2, -1966057, 0, 0, -2490344, 0, 0, -2424808, 0, 0, -2359272, 0, 0, -2293736, 0, 0, -2228200, 0, 0, -2162664, 0, 0, -2097128, 0, 0, -2031592, 0, 0, -1966056, 0, 0, -2293747, 0, 0, -2228211, 0, 0, -2162675, 0, 0, -1638402, 0, 0, -1703938, 0, 0, -1703937, 0, 0, -1638401, 0, 0)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array()
layer_2/name = ""
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Underground"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = -4
layer_3/tile_data = PackedInt32Array()

[node name="Player" parent="." instance=ExtResource("8_5qd2w")]

[node name="Exit" parent="." instance=ExtResource("5_54o1p")]
position = Vector2(-39, 64)

[node name="BoxPos" type="Marker2D" parent="."]
position = Vector2(-180, -241)

[node name="SwordPos" type="Marker2D" parent="."]
position = Vector2(52, -35)

[node name="BG" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.05, 0.01)
motion_offset = Vector2(0, 40)
motion_mirroring = Vector2(640, 480)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer"]
modulate = Color(1, 1, 1, 0.12549)
texture = ExtResource("6_klm07")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.05, 0.01)
motion_offset = Vector2(50, 0)
motion_mirroring = Vector2(640, 480)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer2"]
modulate = Color(1, 1, 1, 0.12549)
texture = ExtResource("6_klm07")

[node name="AbyssModulate" type="CanvasModulate" parent="."]
color = Color(0.545098, 0.545098, 0.545098, 1)

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(-180, -269)
collision_layer = 24
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource("RectangleShape2D_7ecxo")

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(147, -804)
collision_layer = 24
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource("RectangleShape2D_qs66c")
disabled = true

[node name="BossArea" type="Area2D" parent="."]
position = Vector2(183, -804)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
shape = SubResource("RectangleShape2D_qs66c")

[node name="TelePos1" type="Marker2D" parent="."]
position = Vector2(122, -440)

[node name="TelePos2" type="Marker2D" parent="."]
position = Vector2(216, -432)

[node name="TelePos5" type="Marker2D" parent="."]
position = Vector2(92, -555)

[node name="TelePos6" type="Marker2D" parent="."]
position = Vector2(545, -749)

[node name="TelePos3" type="Marker2D" parent="."]
position = Vector2(-192, -72)

[node name="TelePos4" type="Marker2D" parent="."]
position = Vector2(-73, -50)

[node name="TeleBoss1" type="Marker2D" parent="."]
position = Vector2(212, -750)

[node name="TeleBoss2" type="Marker2D" parent="."]
position = Vector2(527, -867)

[node name="BossPos" type="Marker2D" parent="."]
position = Vector2(300, -804)

[node name="Birdie" type="CharacterBody2D" parent="."]
position = Vector2(-72, -434)
script = ExtResource("10_msxe0")
rigged_chance = 1.0

[node name="Birdie2" type="CharacterBody2D" parent="."]
position = Vector2(21, -442)
script = ExtResource("10_msxe0")
rigged_chance = 1.0

[node name="Birdie4" type="CharacterBody2D" parent="."]
position = Vector2(313, -542)
script = ExtResource("10_msxe0")
rigged_chance = 0.02

[node name="Birdie5" type="CharacterBody2D" parent="."]
position = Vector2(-45, -701)
script = ExtResource("10_msxe0")
rigged_chance = 0.02

[node name="Birdie6" type="CharacterBody2D" parent="."]
position = Vector2(-64, -579)
script = ExtResource("10_msxe0")
rigged_chance = 0.05

[node name="Birdie3" type="CharacterBody2D" parent="."]
position = Vector2(-339, -72)
script = ExtResource("10_msxe0")
rigged_chance = 1.0

[node name="VendingMachine" parent="." instance=ExtResource("11_5jtk0")]
position = Vector2(-83, -719)

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="HelpWindow" parent="." instance=ExtResource("10_t5oa6")]
initial_position = 0
visible = false

[connection signal="moved" from="Exit" to="." method="_on_exit_moved"]
[connection signal="body_entered" from="BossArea" to="." method="_on_boss_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
